<resources>
    <string name="app_name">Black Hole Quiz</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="infinitum">Infinitum</string>
    <string name="singularity">Singularity</string>
    <string name="centrality">Centrality</string>
    <string name="_1_the_point_through_to_represent_the_center_of_a_black_hole_is_known_as">1. The point through to represent the center of a black hole is known as:</string>
    <string name="black_hole_quiz_how_well_do_you_know_nature_s_weirdest_creations">Black Hole Quiz: How Well Do You Know Nature\'s Weirdest Creations?</string>
    <string name="black_hole">Black Hole</string>
    <string name="_2_general_relativity_predicts_that_black_holes_have">2. General relativity predicts that black holes have:</string>
    <string name="infinite_density">Infinite density</string>
    <string name="infinite_mass">Infinite mass</string>
    <string name="infinite_volume">Infinite volume</string>
    <string name="when_stars_die_they_become_black_hole_if_they_have_masses_of_at_least">3. When stars die, they become black hole if they have masses of at least:</string>
    <string name="half_the_mass_of_the_sun">Half the mass of the sun</string>
    <string name="three_times_the_mass_of_the_sun">Three times the mass of the sun</string>
    <string name="twice_the_mass_of_the_sun">Twice the mass of the sun</string>
    <string name="eta_carinae">Eta Carinae</string>
    <string name="sagittarius_a">Sagittarius A</string>
    <string name="alpha_centauri">Alpha Centauri</string>
    <string name="a_supermassive_black_hole">A supermassive black hole</string>
    <string name="a_black_hole_that_is_both_supermassive_and_active">A black hole that is both supermassive and active</string>
    <string name="an_active_black_hole">An active black hole</string>
    <string name="_4_the_object_thought_to_be_a_supermassive_black_hole_at_the_centre_of_the_milky_way_galaxy_is_known_as">4. The object thought to be a supermassive black hole at the centre of the Milky Way galaxy is known as:</string>
    <string name="_5_quasars_are_distant_galaxies_whose_central_regions_are_thought_to_contain">5. Quasars are distant galaxies whose central regions are thought to contain:</string>
    <string name="_6_the_event_horizon_of_a_black_hole_represents">6. The event horizon of a black hole represents:</string>
    <string name="the_boundary_beyond_which_nothing_can_escape">The boundary beyond which nothing can escape</string>
    <string name="the_moment_when_the_black_hole_formed">The moment when the black hole formed</string>
    <string name="try_again">Try again</string>
    <string name="the_density_limit_of_a_black_hole">The density limit of a black hole</string>
    <string name="spin">Spin</string>
    <string name="mass">Mass</string>
    <string name="electric_charge">Electric charge</string>
    <string name="charge">Charge</string>
    <string name="hair">Hair</string>
    <string name="_7_black_holes_can_be_described_by_three_and_only_three_simple_numbers">7. Black holes can be described by three and only three simple numbers:</string>
    <string name="get_result">get result</string>
    <string name="_0_enter_your_name">0. Enter your name:</string>
    <string name="earthling">Earthling</string>
    <string name="stranger">Stranger</string>
    <string name="_8_what_is_the_name_of_tunnels_in_spacetime_that_in_theory_can_allow_travel_anywhere_in_space_and_time_or_even_into_another_universe">8. What is the name of tunnels in spacetime that, in theory, can allow travel anywhere in space and time, or even into another universe?</string>
    <string name="confirm">confirm</string>
</resources>